--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,11 @@
 				</form>
 			</main>
 		</div>
+
+    <script>
+        fetch('https://sentinel.shocklogic.com/')
+        .then(res => res.json())
+        .then(data => console.log(data));
+    </script>
 	</body>
 </html>
