--- a/public/chat.html
+++ b/public/chat.html
@@ -57,7 +57,8 @@
     </div>
   </div>
 
-  <script src="https://sentinel.shocklogic.com/socket.io/socket.io.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <!-- <script src="https://sentinel.shocklogic.com/socket.io/socket.io.js"></script> -->
   <script src="js/main.js"></script>
 </body>
 </html>
