--- a/public/chat.html
+++ b/public/chat.html
@@ -11,10 +11,22 @@
 <body>
     <main class="container">
         <div class="sentinel-top sticky-top">
-            <!-- <div class="sentinel-user m-3 p-2">user</div>
-            <div class="sentinel-user m-3 p-2">user</div>
-            <div class="sentinel-user m-3 p-2">user</div>
-            <div class="sentinel-user m-3 p-2">user</div> -->
+            <div class="sentinel-user m-3 p-2">
+                user
+                <span class="sentinel-hover">Tooltip text</span>
+            </div>
+            <div class="sentinel-user m-3 p-2">
+                user
+                <span class="sentinel-hover">Tooltip text</span>
+            </div>
+            <div class="sentinel-user m-3 p-2">
+                user
+                <span class="sentinel-hover">Tooltip text</span>
+            </div>
+            <div class="sentinel-user m-3 p-2">
+                user
+                <span class="sentinel-hover">Tooltip text</span>
+            </div>
         </div>
         <div class="test">test</div>
         <div class="test">test</div>
@@ -29,7 +41,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- <script src="/socket.io/socket.io.js"></script> -->
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://sentinel.shocklogic.com/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
